--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "shaka-player": "^4.14.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
